--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,15 +1,32 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "server.js",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "server.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/api/create-razorpay-order",
+        "dest": "/server.js"
+      },
+      {
+        "src": "/razorpay-webhook",
+        "dest": "/server.js"
+      },
+      {
+        "src": "/api/sendSmsToUsers",
+        "dest": "/server.js"
+      },
+      {
+        "src": "/api/getFlagStatus",
+        "dest": "/server.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/server.js"
+      }
     ]
-}
+  }
+  
